Bug 449505 - Crash due to KUserFeedback failing to get GL info
Summary: Crash due to KUserFeedback failing to get GL info
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kuserfeedback
Classification: Frameworks and Libraries
Component: Telemetry Provider (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI crash
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
: 419505 438348 449384 449431 449450 449502 449515 449530 449555 449576 449588 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-02 15:29 UTC by jacob
Modified: 2022-02-07 18:30 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kcrash report (14.65 KB, text/plain)
2022-02-02 15:29 UTC, jacob
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jacob 2022-02-02 15:29:25 UTC
Created attachment 146177 [details]
Kcrash report

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. When desktop left overnight selecting the update notifier the next morning causes a crash
2. Restart the notifier also results in a crash.
3. Trying to log out of the session results in a crash of the logout functionality.
4. Only way to resolves is opening a terminal and shutdown -4 now

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 20.04
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-02-02 19:37:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/kuserfeedback/-/merge_requests/20
Comment 2 Aleix Pol 2022-02-02 19:48:50 UTC
*** Bug 449502 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2022-02-03 00:39:13 UTC
*** Bug 438348 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2022-02-03 00:39:20 UTC
*** Bug 449384 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2022-02-03 00:39:26 UTC
*** Bug 419505 has been marked as a duplicate of this bug. ***
Comment 6 Aleix Pol 2022-02-03 16:54:19 UTC
Git commit 17db7d75643b4f3dccd5b36a6ab175f03ba74297 by Aleix Pol.
Committed on 02/02/2022 at 19:36.
Pushed by apol into branch 'master'.

opengl source: Do not crash if we could not make our context current

M  +6    -1    src/provider/core/openglinfosource.cpp

https://invent.kde.org/libraries/kuserfeedback/commit/17db7d75643b4f3dccd5b36a6ab175f03ba74297
Comment 7 Nate Graham 2022-02-03 18:21:46 UTC
*** Bug 449555 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-02-03 18:23:42 UTC
*** Bug 449530 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2022-02-03 18:24:02 UTC
*** Bug 449515 has been marked as a duplicate of this bug. ***
Comment 10 David Edmundson 2022-02-03 23:00:54 UTC
*** Bug 449576 has been marked as a duplicate of this bug. ***
Comment 11 Aleix Pol 2022-02-04 12:13:53 UTC
*** Bug 449588 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2022-02-04 14:41:53 UTC
*** Bug 449431 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2022-02-04 15:07:41 UTC
*** Bug 449450 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2022-02-07 18:30:42 UTC
*** Bug 449751 has been marked as a duplicate of this bug. ***