opengl source: Do not crash if we could not make our context current

BUG: 449505